--- a/PaginaConCSS/style.css
+++ b/PaginaConCSS/style.css
@@ -1,48 +1,113 @@
-.headerSup{
+.cabecera{
     margin-top: 5px;
     text-align: center;
     margin-bottom: 5px;
 }
-.headerSup a {
-    color: #000000;
-    margin-left: 10px;
+.cabecera a {
+    font-family: "Arimo",sans-serif;
+    font-size: 12px;
+    line-height: 1;
+    padding: 0 12px;
+    color: #000A2F;
+    text-decoration: none;
 }
 .headerMidLogo {
     display: block;
-    border: solid 1px #000000;
+    width: auto;
+    height: auto;
 
 }
 .logoLeft {
     display: block;
-    border: solid 1px #000000;
-    width: 160px;
+    width: auto;
     height: auto;
+}
+.logoLeft button {
+    background-color: #FFF;
 }
 .logoCenter {
     display: block;
-    border: solid 1px #000000;
-    width: 300px;
+    width: auto;
     height: auto;
-    margin-left: 200px;
+    text-align: center;
+}
+.logoCenter img {
+    width: 300px;
+    height: 50px;
 }
 .logoRight {
     display: block;
-    border: solid 1px #000000;
-    width: 170px;
-    height: auto;
-    margin-left: 85%;
+    width: auto;
+    height: auto;  
+    margin-left: 83%;
 }
-
+.logoRight button {
+    cursor: pointer;
+    margin-bottom: 5px;
+}
+.btnSubs {
+    color: #FFF;
+    width: 115px;
+    height: 35px;
+    font-weight: bold;
+    border-style: none;
+    border-radius: 4px;
+    background-color: #3B96FF;
+    font-size: .9rem;
+}
+.btnLogin {
+    background-color: #FFF;
+    color: #000000;
+    width: 90px;
+    height: 35px;
+    font-weight: bold;
+    border-radius: 4px;
+    font-size: .8rem;
+    border-style: none;
+    border: 1px solid #a8aab3;
+}
 .navBar {
-    margin-top: 5px;
+    background-color: #000A2F;
+    position: block;
+    height: 50px;
+    padding: 0 30px;
     text-align: center;
+    justify-content: center;
+}
+.navBar ul {
+    max-width: 900px;
+    height: 100%;
+    margin: 0 auto;
+}
+.navBar li {
+    display: list-item;
 }
 .navBar a {
+    font-family: "Noto serif",serif;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1;
+    color: #FFF;
+    text-decoration: none;
     margin-left: 10px;
 }
-
+.noticiasTexto {
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+}
+.noticiasTexto div {
+    width: 200px;
+}
+.noticiasTexto a {
+    margin-left: 50px;
+    text-decoration: none;
+}
 .redesSociales {
     float: right;
+    margin-right: 10px;
+}
+.redesSociales li {
+    list-style: none;
 }
 
 h2 {
@@ -50,8 +115,7 @@ h2 {
 }
 .contenedorTexto {
     display: block;
-    border: solid 1px #000000;
-    margin-right: 30%;
+    margin-right: 20%;
 }
 /* Etiquetas */
 .etiquetas {
@@ -62,10 +126,43 @@ h2 {
     
 }
 /* Pie de pagina */
-.pieDePagina {
-    margin-top: 50px;
+footer {
+    display: block;
+    justify-content: flex-start;
+    align-items: center;
+    width: auto;
+    height: 5vh;
+    flex-direction: column;
+    
 }
-.pieDePagina img {
-    width: 200px;
-    height: 100px;
+
+.contCentradoFooter {
+    background-color: #000A2F;
+    display: flex;
+    width: 1500px;
+    margin-top: 3rem;
+}
+
+.imgLista img {
+    width: 185px;
+    height: 60px;
+}
+
+.listFooter {
+    text-decoration: none;
+    font-size: 1.5rem;
+    margin-right: 50px;
+}
+
+.listFooter li {
+    list-style: none;
+    margin-top: 1rem;
+}
+
+.listFooter li a {
+    font-size: 14px;
+    line-height: 22px;
+    font-family: "Arimo",sans-serif;
+    text-decoration: none;
+    color: #FFF;
 }
